--- a/src/App.module.css
+++ b/src/App.module.css
@@ -42,3 +42,8 @@
 .read-the-docs {
   color: #888;
 }
+.appContainer {
+  /* "min-h-screen bg-gray-50" */
+  min-height: 100vh;
+  background-color: #f9fafb; /* gray-50 */
+}
